[gd_scene load_steps=10 format=2]

[ext_resource path="res://ArtWork/icon.png" type="Texture" id=1]
[ext_resource path="res://Scenes/HitBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Stats.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=5]
[ext_resource path="res://Scenes/HitBox.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 32 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 0
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
show_behind_parent = true
texture = ExtResource( 1 )

[node name="HitBox" parent="." instance=ExtResource( 2 )]
script = ExtResource( 6 )

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource( 2 )

[node name="HurtBox" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Stats" type="Node" parent="."]
script = ExtResource( 4 )
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]

[editable path="HitBox"]

[editable path="HurtBox"]
